[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 124.0
margin_top = 16.0
margin_right = 388.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Match 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 179.0
margin_top = 80.0
margin_right = 333.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 2 )
text = "by
Iury Ramos Garcia"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 264.0
margin_right = 94.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 2 )
text = "v1.0 (2021)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnStart" type="Button" parent="."]
margin_left = 136.0
margin_top = 144.0
margin_right = 376.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnToggleFS" type="Button" parent="."]
margin_left = 136.0
margin_top = 176.0
margin_right = 376.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 2 )
text = "Toggle Full Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnToggleMute" type="Button" parent="."]
margin_left = 136.0
margin_top = 208.0
margin_right = 376.0
margin_bottom = 230.0
custom_fonts/font = SubResource( 2 )
text = "Mute: Off"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="BtnStart" to="." method="_on_BtnStart_pressed"]
[connection signal="pressed" from="BtnToggleFS" to="." method="_on_BtnToggleFS_pressed"]
[connection signal="pressed" from="BtnToggleMute" to="." method="_on_BtnToggleMute_pressed"]
